<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="system"
        android:entries="@array/theme_options"
        android:entryValues="@array/theme_values"
        android:key="theme_preference"
        android:icon="@drawable/brush_icon"
        android:summary="Choose your preferred theme"
        android:title="Theme" />

    <EditTextPreference
        app:key="api_key_preference"
        app:title="API Key"
        app:summary="Enter your API key"
        app:dialogTitle="Enter API Key"
        app:dialogMessage="Please enter your API key"
        app:defaultValue=""
        android:icon="@drawable/baseline_key_24"
       />



    <PreferenceCategory app:title="@string/sync_header"
        android:icon="@drawable/baseline_cloud_sync_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
